# RedHanded

./: README.md  main.py  pyproject.toml
examples/: vulnerable_app.py
policies/: security.yaml
src/policydrift/: cli.py  drift.py  judge.py  models.py  pipeline.py  policy_loader.py  scanner.py
tests/: test_judge.py
